--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body,
+h1,
+p {
+  margin: 0;
+}
+
+@font-face {
+  font-family: "Embezzler";
+  src: url("./assets/fonts/Embezzler.otf");
+}
