--- a/src/app/choose-language/choose-language.component.scss
+++ b/src/app/choose-language/choose-language.component.scss
@@ -5,34 +5,29 @@
     rgba(14, 17, 17, 1) 95%,
     rgba(35, 43, 43, 1) 100%
   );
-  height: 100vh;
 
-  .title-language,
-  .body-title-language {
-    height: 100%;
-    display: flex;
-    justify-content: center;
+  h1,
+  p {
+    color: white;
+    font-family: "Embezzler";
+  }
+
+  h1 {
+    font-size: 150px;
   }
 
   .title-language {
     .body-title-language {
-      align-items: center;
       flex-direction: column;
       gap: 30px;
-
-      h1,
-      p {
-        color: white;
-        font-family: "Embezzler";
-      }
-
-      h1 {
-        font-size: 150px;
-      }
 
       p {
         font-size: 50px;
       }
+    }
+
+    .welcome {
+      position: absolute;
     }
 
     select {
