--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,26 @@ p {
   font-family: "Embezzler";
   src: url("./assets/fonts/Embezzler.otf");
 }
+
+.container {
+  height: 100vh;
+}
+
+.display-flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.full-height {
+  height: 100%;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.full-width-height {
+  width: 100%;
+  height: 100%;
+}
