--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,40 +2,24 @@ html,
 body {
   height: 100%;
   width: 100%;
-  margin: 0;
   padding: 0;
 }
 
 body,
 h1,
+pre,
+html,
+h2,
 p {
   margin: 0;
+}
+
+app-menu {
+  display: flex;
+  justify-content: center;
 }
 
 @font-face {
   font-family: "Embezzler";
   src: url("./assets/fonts/Embezzler.otf");
-}
-
-.container {
-  height: 100vh;
-}
-
-.display-flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.full-height {
-  height: 100%;
-}
-
-.full-width {
-  width: 100%;
-}
-
-.full-width-height {
-  width: 100%;
-  height: 100%;
 }
