--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
   <div
     class="bottom-vw-3 left-vw-4 display-flex-center flex-collumn position-absolute"
   >
-    <div class="speech-bubble position-relative width-vw-5">
+    <div class="speech-bubble border-radius-10 position-relative width-vw-5">
       <div class="position-relative">
         <p class="font-vt323 text-uppercase">
           {{ "Campos.Localizacao" | translate }}
@@ -39,22 +39,4 @@
       target="_blank"
     ></a>
   </div>
-  <!-- <div class="container-me">
-    <div class="text-picture">
-      <img src="assets/images/eu.jpg" alt="Campos" />
-      <div class="text">
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum.
-        </p>
-      </div>
-    </div>
-  </div> -->
 </div>
