--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,5 +1,5 @@
-<div class="menu width-vw-50 height-px-50 border-radius-4">
-  <ul class="display-flex justify-content-space-around">
+<div class="menu width-vw-50 height-px-50 border-radius-4 transform-rotate-180">
+  <ul class="display-flex justify-content-space-around transform-rotate-180">
     <li
       *ngFor="let menu of menuItems"
       class="display-flex-center flex-collumn cursor-pointer"
