--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <app-menu></app-menu>
   <div class="display-flex-center half-height">
     <div class="container-about-me full-height half-width">
-      <div id="monitor" class="full-width-height">
+      <div id="monitor" class="full-width-height background-screens">
         <div class="full-width-height position-absolute overflow-hidden">
           <div class="scanlines full-width-height position-absolute"></div>
         </div>
@@ -15,7 +15,7 @@
             </h2>
             <pre
               id="output"
-              class="color-white font-vt323 text-uppercase f-vh-2 line-height-vw-2"
+              class="padding-18 color-white font-vt323 text-uppercase f-vh-2 line-height-vw-2"
             ><a>$></a>{{ typedText | translate }}</pre>
           </div>
         </div>
