--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -180,6 +180,10 @@
   }
 }
 
+.white-space-pre-line {
+  white-space: pre-line;
+}
+
 .font-limited {
   text-overflow: ellipsis;
   white-space: nowrap;
