--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -2,10 +2,39 @@
 @use "../../assets/styles/keyframes.scss";
 
 .tablet {
-  background-color: #222;
+  background-color: #141414;
 
   .card-container {
     border: 5px solid black;
+
+    background: repeating-linear-gradient(
+      rgba(0, 150, 0, 0.75) 0px,
+      rgba(0, 150, 0, 0.75) 1px,
+      transparent 2px,
+      transparent 4px
+    );
+
+    .menu-tablet {
+      background-color: rgb(0 0 0 / 90%);
+      margin-bottom: 1vw;
+
+      .bar,
+      .battery {
+        background-color: #ccc;
+      }
+
+      .bar {
+        margin-right: 5px;
+      }
+
+      .battery {
+        margin-right: 20px;
+      }
+
+      .battery-fill {
+        background-color: #4caf50;
+      }
+    }
 
     .card {
       border: 3px solid black;
