--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -69,6 +69,10 @@
   justify-content: space-between;
 }
 
+.align-itens-flex-end {
+  align-items: flex-end;
+}
+
 @for $i from 4 through 64 {
   .gap-#{$i} {
     gap: #{$i}px;
