--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,14 +8,12 @@
         </div>
         <div class="full-width-height">
           <div class="full-width-height">
-            <h2
-              class="color-white font-vt323 text-uppercase text-align-center f-vh-3"
-            >
+            <h2 class="color-white text-uppercase text-align-center f-vh-3">
               {{ "Campos.SobreMimTitulo" | translate }}
             </h2>
             <pre
               id="output"
-              class="padding-18 color-white font-vt323 text-uppercase f-vh-2 line-height-vw-2"
+              class="padding-18 color-white text-uppercase f-vh-2 line-height-vw-2"
             ><a>$></a>{{ typedText | translate }}</pre>
           </div>
         </div>
@@ -27,7 +25,7 @@
   >
     <div class="speech-bubble border-radius-10 position-relative width-vw-5">
       <div class="position-relative">
-        <p class="font-vt323 text-uppercase">
+        <p class="text-uppercase">
           {{ "Campos.Localizacao" | translate }}
         </p>
       </div>
