--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,4 +1,3 @@
-@use "../../assets/styles/styles.scss";
 @use "../../assets/styles/keyframes.scss";
 
 .tablet {
@@ -21,14 +20,6 @@
       .bar,
       .battery {
         background-color: #ccc;
-      }
-
-      .bar {
-        margin-right: 5px;
-      }
-
-      .battery {
-        margin-right: 20px;
       }
 
       .battery-fill {
@@ -67,4 +58,32 @@
 
 ::-webkit-scrollbar-track {
   background-color: black;
+}
+
+@media screen and (min-width: 3440px) {
+  .tablet {
+    width: 50%;
+    height: 90%;
+
+    .card {
+      width: 13vw;
+
+      h1 {
+        font-size: 20px;
+      }
+    }
+
+    .container-information {
+      img {
+        width: 5vw;
+      }
+      h1 {
+        font-size: 3vw;
+      }
+      p {
+        line-height: 100px;
+        font-size: 60px;
+      }
+    }
+  }
 }
