--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -1,4 +1,4 @@
-@use "../../../../assets/styles/styles.scss";
+
 @import "../../../../assets/styles/variables";
 
 .menu {
@@ -35,6 +35,18 @@
 
     a {
       color: $hover-color;
+    }
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  li {
+    a {
+      font-size: 20px;
+    }
+
+    mat-icon {
+      font-size: 40px;
     }
   }
 }
