--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "./assets/styles/variables";
+
 html,
 body {
   height: 100%;
@@ -12,6 +14,7 @@ html,
 h2,
 p {
   margin: 0;
+  font-family: "VT323", monospace;
 }
 
 app-menu {
@@ -22,4 +25,328 @@ app-menu {
 @font-face {
   font-family: "Embezzler";
   src: url("./assets/fonts/Embezzler.otf");
+}
+
+.container {
+  height: 100vh;
+  background: $background-color;
+}
+
+//backgrounds
+.background-screens {
+  background-color: $background-color;
+  background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 120%);
+}
+
+.background-screens-effect {
+  background: repeating-linear-gradient(
+    rgba(0, 150, 0, 0.75) 0px,
+    rgba(0, 150, 0, 0.75) 1px,
+    transparent 2px,
+    transparent 4px
+  );
+}
+
+.cebrace-background {
+  background: linear-gradient(to top, orange, transparent);
+}
+
+.poliedro-background {
+  background: linear-gradient(to top, rgb(28, 108, 248), transparent);
+}
+
+.multilaser-background {
+  background: linear-gradient(
+    to top,
+    rgb(9, 159, 213),
+    rgb(127, 240, 244),
+    transparent
+  );
+}
+
+.viasat-background {
+  background: linear-gradient(
+    to top,
+    rgb(47, 136, 245),
+    rgb(133, 255, 103),
+    transparent
+  );
+}
+
+//display block
+.display-block {
+  display: block;
+}
+
+// flex-styles
+.display-flex {
+  display: flex;
+}
+
+.display-flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.display-flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-collumn {
+  flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
+.justify-content-space-around {
+  justify-content: space-around;
+}
+
+.justify-content-space-between {
+  justify-content: space-between;
+}
+
+.align-itens-flex-end {
+  align-items: flex-end;
+}
+
+.align-itens-center {
+  align-items: center;
+}
+
+@for $i from 4 through 64 {
+  .gap-#{$i} {
+    gap: #{$i}px;
+  }
+}
+
+//size
+.full-height {
+  height: 100%;
+}
+
+.half-height {
+  height: 50%;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.half-width {
+  width: 50%;
+}
+
+.full-width-height {
+  width: 100%;
+  height: 100%;
+}
+
+.half-width-height {
+  width: 50%;
+  height: 50%;
+}
+
+@for $i from 1 through 680 {
+  .width-px-#{$i} {
+    width: #{$i}px !important;
+  }
+
+  .height-px-#{$i} {
+    height: #{$i}px !important;
+  }
+
+  .width-vw-#{$i} {
+    width: #{$i}vw;
+  }
+
+  .height-vh-#{$i} {
+    height: #{$i}vh;
+  }
+
+  .height-percent-#{$i} {
+    height: #{$i} + "%";
+  }
+  .width-percent-#{$i} {
+    width: #{$i} + "%";
+  }
+
+  .max-width-percent-#{$i} {
+    max-width: #{$i} + "%";
+  }
+}
+
+//border
+@for $i from 1 through 30 {
+  .border-radius-#{$i} {
+    border-radius: #{$i}px;
+  }
+}
+
+//padding
+@for $i from 1 through 30 {
+  .padding-#{$i} {
+    padding: #{$i}px;
+  }
+}
+
+//margin
+@for $i from 1 through 30 {
+  .margin-top-#{$i} {
+    margin-top: #{$i}px;
+  }
+
+  .margin-right-#{$i} {
+    margin-right: #{$i}px;
+  }
+
+  .margin-left-#{$i} {
+    margin-left: #{$i}px;
+  }
+
+  .margin-bottom-#{$i} {
+    margin-bottom: #{$i}px;
+  }
+}
+
+//fonts
+.color-white {
+  color: $text-color;
+}
+
+.font-embezzler {
+  font-family: "Embezzler";
+}
+
+.text-align-center {
+  text-align: center;
+}
+
+.text-align-start {
+  text-align: start;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
+@for $i from 1 through 150 {
+  .f-#{$i} {
+    font-size: #{$i}px;
+  }
+
+  .f-vh-#{$i} {
+    font-size: #{$i}vh;
+  }
+
+  .f-vw-#{$i} {
+    font-size: #{$i}vw;
+  }
+
+  .line-height-vw-#{$i} {
+    line-height: #{$i}vw;
+  }
+}
+
+.white-space-pre-line {
+  white-space: pre-line;
+}
+
+.font-limited {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+//position
+.position-absolute {
+  position: absolute;
+}
+
+.position-relative {
+  position: relative;
+}
+
+@for $i from 1 through 10 {
+  .top-vw-#{$i} {
+    top: #{$i}vw;
+  }
+
+  .top-vh-#{$i} {
+    top: #{$i}vh;
+  }
+
+  .right-vw-#{$i} {
+    right: #{$i}vw;
+  }
+
+  .right-vh-#{$i} {
+    right: #{$i}vh;
+  }
+
+  .bottom-vw-#{$i} {
+    bottom: #{$i}vw;
+  }
+
+  .bottom-vh-#{$i} {
+    bottom: #{$i}vh;
+  }
+
+  .left-vw-#{$i} {
+    left: #{$i}vw;
+  }
+
+  .left-vh-#{$i} {
+    left: #{$i}vh;
+  }
+}
+
+.bottom-0 {
+  bottom: 0;
+}
+
+//cursor
+.cursor-pointer {
+  cursor: pointer;
+}
+
+//overflow
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
+//social
+.linkedin-color {
+  color: #007bb5;
+}
+
+.whatsapp-color {
+  color: #0d9f16;
+}
+
+.gmail-color {
+  color: #4386f7;
+}
+
+//transform
+@for $i from 1 through 180 {
+  .transform-rotate-#{$i} {
+    transform: rotate(#{$i}deg);
+  }
 }
