--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,13 @@ app-menu {
   justify-content: center;
 }
 
+app-sound-config {
+  position: absolute;
+  right: 50px;
+  bottom: 20px;
+  cursor: pointer;
+}
+
 @font-face {
   font-family: "Embezzler";
   src: url("./assets/fonts/Embezzler.otf");
