--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -6,9 +6,7 @@
       [routerLink]="menu.routeName"
       routerLinkActive="active"
     >
-      <mat-icon
-        class="color-white width-px-50 height-px-50 f-50 text-align-center"
-      >
+      <mat-icon class="color-white f-50 text-align-center">
         {{ menu.icon }}</mat-icon
       >
       <a class="color-white font-embezzler f-25">
