--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,4 +1,3 @@
-
 @import "../../assets/styles/variables";
 
 .information-container {
@@ -17,7 +16,7 @@
   .contact-informations {
     background-color: rgba(14, 17, 17, 0.6);
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 50% 50%;
 
     .border {
       border-right: 1px solid white;
@@ -59,6 +58,45 @@
 
       p {
         font-size: 1vw;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container-contact-me {
+    margin-top: 15px;
+
+    .information-container {
+      width: 100%;
+      border-top: 1px solid #90ee90;
+      border-bottom: 1px solid #90ee90;
+      box-shadow: 0px 0px 15px rgba(144, 238, 144, 0.8);
+
+      .title,
+      .contact-informations {
+        border: none;
+        width: 100%;
+        box-shadow: none;
+        border-radius: 0;
+      }
+
+      .title {
+        font-size: 30px;
+      }
+
+      .contact-informations {
+        .border {
+          border-right: 1px solid #90ee90;
+        }
+
+        img {
+          width: 30vw;
+        }
+
+        p {
+          font-size: 3vw;
+        }
       }
     }
   }
