--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <app-menu></app-menu>
-  <div class="display-flex-center half-height">
-    <div class="container-about-me full-height half-width">
+  <div class="container-about-me display-flex-center half-height">
+    <div class="about-me full-height half-width">
       <div id="monitor" class="full-width-height background-screens">
         <div class="full-width-height position-absolute overflow-hidden">
           <div class="scanlines full-width-height position-absolute"></div>
         </div>
         <div class="full-width-height">
-          <div class="full-width-height">
+          <div class="texts full-width-height">
             <h2 class="color-white text-uppercase text-align-center f-vh-3">
               {{ "Campos.SobreMimTitulo" | translate }}
             </h2>
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div
-    class="bottom-vw-3 left-vw-4 display-flex-center flex-collumn position-absolute"
+    class="container-planet display-flex-center flex-collumn position-absolute bottom-vw-3 left-vw-4"
   >
     <div class="speech-bubble border-radius-10 position-relative width-vw-5">
       <div class="position-relative">
