--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-menu></app-menu>
-  <div class="display-flex-center height-percent-80">
+  <div class="tablet-container display-flex-center height-percent-80">
     <div
       class="tablet width-percent-80 height-percent-80 display-flex-center position-relative overflow-hidden border-radius-20"
     >
@@ -8,7 +8,7 @@
         class="card-container overflow-hidden background-screens overflow-y-auto height-percent-90 width-percent-90 border-radius-15"
       >
         <div
-          class="display-flex-center full-width menu-tablet padding-10 justify-content-space-between color-white"
+          class="menu-tablet display-flex-center full-width padding-10 justify-content-space-between color-white"
         >
           <div class="display-flex align-itens-flex-end">
             <div
@@ -30,7 +30,7 @@
         </div>
         <div
           *ngIf="!id; else projectInformation"
-          class="gap-10 full-width-height justify-content-space-around display-flex flex-wrap"
+          class="cards gap-10 full-width-height justify-content-space-around display-flex flex-wrap"
         >
           <div
             class="card border-radius-5 width-vw-20 height-vh-25 display-flex flex-collumn"
@@ -45,7 +45,7 @@
               [alt]="project.company + '-logo'"
             />
             <div
-              class="position-absolute bottom-0 cursor-pointer full-width height-vh-5"
+              class="informations position-absolute bottom-0 cursor-pointer full-width height-vh-5"
               [style.opacity]="0"
               [class.show]="cursorInIndex === index"
               class="{{ project.company.toLowerCase() }}-background"
