--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -87,3 +87,72 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .tablet-container {
+    width: 100%;
+    height: 89%;
+
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+
+    background-color: #000000;
+    background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 120%);
+
+    .tablet,
+    .card-container {
+      border-radius: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    .tablet {
+      background: none;
+
+      .card-container {
+        border: none;
+        background: none;
+        padding: 10px;
+
+        .menu-tablet {
+          display: none;
+        }
+        .cards {
+          height: 100%;
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
+          padding-top: 10px;
+
+          .card {
+            height: 120px;
+            width: 120px;
+
+            .informations {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .container-information {
+    img {
+      width: 20vw;
+    }
+
+    h1 {
+      font-size: 9vw;
+    }
+
+    p {
+      line-height: 6vw;
+      font-size: 4vw;
+    }
+  }
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
