--- a/src/app/shared/components/menu/menu.component.scss
+++ b/src/app/shared/components/menu/menu.component.scss
@@ -1,4 +1,3 @@
-
 @import "../../../../assets/styles/variables";
 
 .menu {
@@ -39,6 +38,11 @@
   }
 }
 
+mat-icon {
+  height: 50px;
+  width: 50px;
+}
+
 @media screen and (max-width: 1366px) {
   li {
     a {
@@ -47,6 +51,29 @@
 
     mat-icon {
       font-size: 40px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .menu,
+  ul {
+    transform: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .menu {
+    width: 100%;
+    border-left: 0;
+    border-right: 0;
+
+    ul {
+      margin-top: 30px;
+
+      a {
+        display: none;
+      }
     }
   }
 }
