--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -70,8 +70,7 @@
     .information-container {
       width: 100%;
       border-top: 1px solid #90ee90;
-      border-bottom: 1px solid #90ee90;
-      box-shadow: 0px 0px 15px rgba(144, 238, 144, 0.8);
+      box-shadow: 0 0 15px 0 rgba(144, 238, 144, 0.8);
 
       .title,
       .contact-informations {
@@ -95,7 +94,7 @@
         }
 
         p {
-          font-size: 11px;
+          font-size: 10px;
         }
       }
     }
