SÓ PRA VER SE FUNCIONA

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,10 +11,10 @@
             <h2 class="color-white text-uppercase text-align-center f-vh-3">
               {{ "Campos.SobreMimTitulo" | translate }}
             </h2>
-            <pre
+            <p
               id="output"
               class="padding-18 color-white text-uppercase f-vh-2 line-height-vw-2"
-            ><a>$></a>{{ typedText | translate }}</pre>
+            ><a>$></a>{{ typedText | translate }}</p>
           </div>
         </div>
       </div>
