--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -28,7 +28,7 @@ mat-icon {
     }
 
     h2,
-    pre {
+    p {
       word-wrap: break-word;
       text-wrap: wrap;
     }
@@ -105,7 +105,7 @@ mat-icon {
         .texts {
           padding-top: 10px;
 
-          pre {
+          p {
             font-size: 15px;
             line-height: 20px;
           }
