LAST TESTE ABOUT ME GOOOO

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,8 +13,10 @@
             </h2>
             <p
               id="output"
-              class="padding-18 color-white text-uppercase f-vh-2 line-height-vw-2"
-            ><a>$></a>{{ typedText | translate }}</p>
+              class="padding-18 color-white text-uppercase f-vh-2 line-height-vw-2 white-space-pre-line"
+            >
+              <a>$></a>{{ typedText | translate }}
+            </p>
           </div>
         </div>
       </div>
