--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -115,15 +115,6 @@ mat-icon {
   }
 
   .container-planet {
-    left: 0;
-    bottom: 0;
-
-    .speech-bubble {
-      width: 80%;
-
-      p {
-        font-size: 12px;
-      }
-    }
+    display: none;
   }
 }
