--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ app-menu {
 }
 
 app-sound-config {
-  position: absolute;
+  position: fixed;
   right: 50px;
   bottom: 20px;
   cursor: pointer;
