--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <div class="container-about-me display-flex-center half-height">
     <div class="about-me full-height half-width">
       <div id="monitor" class="full-width-height background-screens">
-        <div class="full-width-height position-absolute overflow-hidden">
+        <div class="scanline-container full-width-height position-absolute overflow-hidden">
           <div class="scanlines full-width-height position-absolute"></div>
         </div>
         <div class="full-width-height">
