--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -85,8 +85,9 @@ mat-icon {
 }
 
 @media screen and (max-width: 768px) {
-  .container-about-me {
-    height: 100%;
+  .container {
+    background-color: #000000;
+    background-image: radial-gradient(rgba(0, 150, 0, 0.75), black 120%);
 
     .about-me {
       margin-top: 0;
@@ -97,9 +98,16 @@ mat-icon {
         border: none;
         border-image-source: none;
         border-image-slice: none;
+        background: none;
 
-        .scanlines {
+        .scanline-container {
           display: none;
+          width: 0;
+          height: 0;
+
+          .scanlines {
+            display: none;
+          }
         }
 
         .texts {
