--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
             </h2>
             <p
               id="output"
-              class="padding-18 color-white text-uppercase f-vh-2 line-height-vw-2 white-space-pre-line"
+              class="padding-18 color-white text-uppercase f-vh-2 line-height-px-32 white-space-pre-line"
             >
               <a>$></a>{{ typedText | translate }}
             </p>
