--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -71,7 +71,7 @@
                 {{ projectSelected.name.toUpperCase() }}
               </h1>
             </div>
-            <p class="color-white f-vw-2 line-height-px-50 white-space-pre-line">
+            <p class="color-white f-vw-2 line-height-px-50 white-space-pre-line padding-20">
               {{ projectSelected.description | translate }}
             </p>
           </div>
